# fast-subset-convolution

./: CMakeLists.txt  DominatingSet.cpp  DominatingSet.h  FastSubsetConvolution.cpp  FastSubsetConvolution.h  GraphGenerator.cpp  GraphGenerator.h  MinSumRingEmbedd.h  MinSumRingEmbeddBigInt.cpp  MinSumRingEmbeddBigInt.h  MinSumRingEmbeddBigIntFixedSize.cpp  MinSumRingEmbeddBigIntFixedSize.h  Path_Embedding.cpp  Path_Embedding.h  README.md  SmallMinSumRing64Bit.cpp  SmallMinSumRing64Bit.h  SmallMinSumRingEmbedd.cpp  SmallMinSumRingEmbedd.h  Tree.cpp  Tree.h  benchmark_dominating_set.cpp  benchmark_dominating_set.h  benchmark_fsconv.cpp  benchmark_fsconv.h  benchmark_path_embedding.cpp  benchmark_path_embedding.h  benchmark_steiner.cpp  benchmark_steiner.h  benchmark_writer.cpp  benchmark_writer.h  common.h  functions.cpp  functions.h  main.cpp  mobius.cpp  mobius.h  steiner.cpp  steiner.h  stp_parser.cpp  (+7 more)
FastSubsetConvolution/: FastSubsetConvolution.cbp  FastSubsetConvolution.depend  FastSubsetConvolution.layout  MinSumRingEmbedd.cpp  MinSumRingEmbedd.h
